<resources>
    <string name="app_name">GARBLT INS</string>
    <string name="save">save</string>
    //form label strings
    <string name="report">تقرير فحص السلامه</string>
    <string name="wayname">على طريق</string>
    <string name="waynum">طريق رقم</string>
    <string-array name="waynumbers">
        <item>١</item>
        <item>٢</item>
        <item>٣</item>
        <item>٤</item>
        <item>٥</item>
        <item>٦</item>
        <item>٧</item>
    </string-array>
    <string name="engname">القائم بالمرور</string>
    <string name="visit_date">تاريخ التفتيش</string>
    <string name="dateform">DD/MM/YYYY</string>
    <string name="prodetails">تفاصيل عامه عن المشروع</string>
    <string name="area">المنطقه التابع لها </string>
    <string-array name="area">
        <item>مركزيه</item>
        <item>فرعيه</item>
    </string-array>
    <string name="category">تصنيف الطريق</string>
    <string-array name="roads">
        <item>زراعى</item>
        <item>صحراوى</item>
        <item>ساحلى</item>
    </string-array>
    <string name="length">طول الطريق</string>
    <string name="km">كم</string>
    <string name="importance">أهميه الطريق</string>
    <string name="explanation">وصف الطريق</string>
    <string name="floorsigin">حاله العلامات الارضيه</string>
    <string-array name="statue">
        <item>سيئه</item>
        <item>جيده</item>
        <item>ممتازه</item>
    </string-array>
    <string name="uppersigin">حاله العلامات العلويه</string>
    <string name="roaddata">بيانات عن الطريق</string>
    <string name="speed1">السرعه التشغيليه</string>
    <string name="speed2">السرعه التصميميه</string>
    <string name="kmh">كم/ساعه</string>
    <string name="traficreport">تقرير الحصر المرورى</string>
    <string name="progressoperation">العمليات القائمه</string>
    <string name="accedientnumb">عدد الحوادث</string>
    <string name="accident">حادثه</string>
    <string name="blackreport">تقرير النقط السوداء</string>
    <string name="kmlocation">الموقع الكيلومترى</string>
    <string name="acciedentnum">عدد الحوادث</string>
    <string name="killernum">عددالقتلى</string>
    <string name="injurnum">عددالجرحى</string>
    <string name="afterpass">بعد المرور على الطريق</string>
    <string name="first">أولا التصميم الهندسى للطريق</string>
    <string name="second">ثانيا المنحنيات الأفقيه</string>
    <string name="third">ثالثا حاله سطح الرصف</string>
    <string name="forth">رابعا وسائل التحكم المرورى</string>
    <string name="lining">1- التخطيط</string>
    <string name="reflections">٢-العواكس</string>
    <string name="uppersigns">٣-العلامات العلويه</string>
    <string name="floorsigns">٤-العلامات الأرضيه</string>
    <string name="fifth">خامسا الدخول والخروج </string>
    <string name="sixth">سادسا حاله الامان فى الطريق</string>
    <string name="safespace">مسافات الامان الجانبيه</string>
    <string name="randometurn">الدورانات العشوائيه</string>
    <string name="weathereffect">تأثير العوامل الجويه</string>
    <string name="note">ملاحظات</string>
    <string name="advices">التوصيات</string>
    <string name="shortterm">الحل على المدى القصير</string>
    <string name="one">١</string>
    <string name="two">٢</string>
    <string name="three">٣</string>
    <string name="four">٤</string>
    <string name="five">٥</string>
    <string name="longterm">الحل على المدى الطويل</string>
    <string name="title_activity_main_drawer">MainDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
