<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginTop="4dp"
    android:animateLayoutChanges="true"
    android:layoutDirection="rtl"
    app:layout_collapseMode="parallax">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
                android:text="@string/prodetails"
                android:textSize="@dimen/boldtext"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/details_card_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/expand" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/details_card_content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/area" />

                <Spinner
                    android:id="@+id/details_card_spinner_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/category" />

                <Spinner
                    android:id="@+id/details_card_spinner_road_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/length" />

                <EditText
                    android:id="@+id/details_card_et_road_length"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/form_et_background"
                    android:inputType="numberDecimal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:text="@string/km" />
            </LinearLayout>

            <EditText
                android:id="@+id/details_card_et_road_importants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_et_background"
                android:hint="@string/importance"
                android:padding="4dp"
                android:layout_marginTop="4dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/details_card_et_road_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/form_et_background"
                android:hint="@string/explanation"
                android:padding="4dp"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/floorsigin" />

                <Spinner
                    android:id="@+id/details_card_spinner_floor_sign_statue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/uppersigin" />

                <Spinner
                    android:id="@+id/details_card_spinner_upper_sign_statue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>



