<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/new_inspection_report_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginTop="4dp"
    android:animateLayoutChanges="true"
    android:layoutDirection="rtl"
    app:layout_collapseMode="parallax">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/report"
                android:textSize="@dimen/boldtext"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/report_card_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/expand" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/report_card_content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/report_card_wayname_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_et_background"
                android:hint="@string/wayname"
                android:inputType="text"
                android:padding="4dp"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/waynum"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/report_card_way_num_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/report_card_eng_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/form_et_background"
                android:hint="@string/engname"
                android:padding="4dp"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/visit_date"
                    android:textSize="15sp"
                    android:padding="4dp"/>

                <TextView
                    android:id="@+id/report_card_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center"
                    android:text="@string/dateform" />

                <ImageView
                    android:id="@+id/new_inspection_report_card_date_iv"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="2dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_date_range_black" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
